Fixed line spacing for element child container content
Surrounding the text with p-tags and removing their margin makes the content more readable in both HTML and DOCX form

--- a/nvcs-client/src/document.css
+++ b/nvcs-client/src/document.css
@@ -38,6 +38,10 @@
     padding: 10px;
 }
 
+.element-child-container p {
+    margin: 0;
+}
+
 .bottom-buttons {
     padding: 5px 0;
 }
